# llm-redteam-framework

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  INCIDENT_REPORT.md  README.md  SECURITY.md  detector.pkl.sha256  pyproject.toml  test_navigator.py
.github/: dependabot.yml
.github/workflows/: ci.yml
attack_mapping/: enricher.py
data/: adversarial_seeds.txt  benign_prompts.txt
src/redteam/: __init__.py  generator.py
src/redteam/detector/: __init__.py  detector.py  tfidf_classifier.py
src/redteam/eval/: __init__.py  harness.py
src/redteam/generators/: __init__.py  base.py  categories.py  corpus.py  mutations.py
src/redteam/mutators/: __init__.py  context_escape.py  direct_override.py  indirect_embed.py  multi_step.py  obfuscation.py  role_switch.py
tests/: test_attack_mapping.py  test_detector.py  test_eval.py  test_fp_budget.py  test_generator.py  test_generators.py  test_mutators.py
