[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-redteam-framework"
version = "0.1.0"
description = "Offline adversarial-prompt generation and detection framework (no live LLM API required)."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Pooja Kiran" }]
keywords = ["llm", "red-team", "prompt-injection", "security", "guardrails"]
dependencies = [
    "numpy>=1.23",
    "scikit-learn>=1.1",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff==0.8.4", "pyright>=1.1", "bandit>=1.7"]

[project.scripts]
redteam-eval = "redteam.eval.harness:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q -p no:asyncio"

[tool.ruff]
line-length = 100
